# ai-web-test

./: pyproject.toml
examples/: example_test.py  run_test.py  test_learning.py
src/ai_web_tester/: README.md  __init__.py  setup.cfg
src/ai_web_tester.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/ai_web_tester/cli/: commands.py
src/ai_web_tester/core/: learner.py  models.py  runner.py  tester.py
tests/: test1.json  test_basic.py
tests/recorded/: example_test.json
