[metadata]
name = ai_web_tester
version = attr: ai_web_tester.__version__
author = Tyler Gilman
author_email = tylersgilman@gmail.com
description = AI-powered web testing automation tool
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yourusername/ai-web-tester
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
install_requires =
    selenium>=4.0.0
    torch>=1.9.0
    click>=8.0.0
    pyyaml>=5.4.1
    webdriver_manager>=3.5.0

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    ai-web-test = ai_web_tester.cli.commands:cli
